fix: toggle sort to enable scroll on mobile #111

--- a/internal/bookmarks/assets/css/styles.css
+++ b/internal/bookmarks/assets/css/styles.css
@@ -187,5 +187,5 @@ a.bookmark_path {
 }
 
 .sort_button {
-  padding-right: 5px;
+  margin: 5px;
 }
